# Isometric_Finder

./: CMakeLists.txt  tags  task.norg
include/: Algorithm.h
res/: ekko.pxo  obstacle.pxo  texture.png.bak  texture.pxo
scripts/: obstacle_40_records.txt  obstacle_line_40_records.txt  obstacle_line_60_records.txt  records.txt  visualize.py
src/: Algorithm.cpp  Isometric_Finder.cpp
